# se-wmacevoy

./: Makefile  README.md  lights.txt
.github/workflows/: copy_command.yml  copy_command_cloud.yml
copy_command/: CMakeLists.txt  CMakeLists.txt~  Dockerfile  README.md  copy_command.c  copyfile.c
